--- a/作业一：华为首页(响应式)/css/index.css
+++ b/作业一：华为首页(响应式)/css/index.css
@@ -3,3 +3,102 @@
   margin: 0;
   padding: 0;
 }
+html,
+body {
+  font-size: 10px;
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
+/* 清除浮动 */
+.clearfix {
+  content: "";
+  display: block;
+  clear: both;
+}
+/* 头部 */
+header {
+  /* 导航条logo部分 */
+}
+header ul {
+  background-color: #5d5d58;
+  width: 100%;
+  height: 3.6rem;
+}
+header ul .sy {
+  background-color: #ffffff;
+}
+header ul .sy a {
+  color: #333333;
+}
+header ul li {
+  float: left;
+}
+header ul li:nth-of-type(1) {
+  margin-left: 4%;
+}
+header ul li a {
+  display: block;
+  padding: 0 1.5rem;
+  font-size: 1.6rem;
+  height: 3.5rem;
+  line-height: 3.5rem;
+  color: #cccccc;
+  width: auto;
+}
+header nav {
+  height: 8rem;
+  padding: 0 5%;
+  overflow: hidden;
+  border-bottom: 0.1rem solid #efefef;
+}
+header nav img {
+  display: block;
+  border: none;
+}
+header nav .logo {
+  float: left;
+  width: 17rem;
+  height: 4rem;
+  margin-top: 2rem;
+}
+header nav .login {
+  float: right;
+  margin-top: 1.2rem;
+}
+/* 媒体查询 */
+@media all and (max-width: 960px) {
+  #coverone {
+    display: none;
+  }
+  #covertwo {
+    display: block;
+  }
+}
+/* 头部第二个 */
+.nav {
+  overflow: hidden;
+  display: block;
+  height: 6rem;
+  border-bottom: 0.1rem solid #efefef;
+}
+.nav .logo {
+  float: left;
+  padding: 1rem 1.5rem;
+  width: 16.5rem;
+  height: 4rem;
+}
+.nav a {
+  width: 5rem;
+  height: 4rem;
+  display: block;
+  float: right;
+  margin-top: 2rem;
+}
+.nav .menu {
+  margin-top: 2.3rem;
+}
+/* 主体部分 */
