--- a/作业一：华为首页(响应式)/css/index.less
+++ b/作业一：华为首页(响应式)/css/index.less
@@ -3,3 +3,114 @@
     margin: 0;
     padding: 0;
 }
+html,body{
+    font-size: 10px;
+}
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
+/* 清除浮动 */
+.clearfix{
+    content: "";
+    display: block;
+    clear: both;
+}
+
+/* 头部 */
+header{
+    ul{
+        background-color: #5d5d58;
+        width: 100%;
+        height: 3.6rem;
+        
+        .sy{
+            background-color: #ffffff;
+            a{
+                color: #333333;
+            }
+        }
+        
+        li{
+            float: left;
+            &:nth-of-type(1){
+                margin-left: 4%;
+            }
+            a{
+                display: block;
+                padding: 0 1.5rem;
+                font-size: 1.6rem;
+                height: 3.5rem;
+                line-height: 3.5rem;
+                color: #cccccc;
+                width: auto;
+            }
+        }
+    }
+        /* 导航条logo部分 */
+    nav{
+        height: 8rem;
+        // background-color: #cb4949;
+        padding: 0 5%;
+        overflow: hidden;
+        border-bottom: 0.1rem solid #efefef;
+        img{
+            display: block;
+            border: none;
+        }
+        .logo{
+            float: left;
+            width: 17rem;
+            height: 4rem;
+            // background-color: aqua;
+            margin-top: 2rem;
+        }
+        .login{
+            float: right;
+            margin-top: 1.2rem;
+        }
+    }
+}
+/* 媒体查询 */
+@media all and (max-width: 960px) {
+    #coverone {
+        display: none;
+    }
+    #covertwo {
+        display: block;
+    }
+}
+// #coverone{
+//     display: none;
+// }
+// #covertwo{
+//     display: block;
+// }
+/* 头部第二个 */
+.nav{
+    overflow: hidden;
+    display: block;
+    height: 6rem;
+    border-bottom: 0.1rem solid #efefef;
+    .logo{
+        float: left;
+        padding: 1rem 1.5rem;
+        width: 16.5rem;
+        height: 4rem;
+    }
+    a{
+        width: 5rem;
+        height: 4rem;
+        // background-color: aqua;
+        display: block;
+        float: right;
+        margin-top: 2rem;
+    }
+    .menu{
+        margin-top: 2.3rem;
+    }
+}
+
+/* 主体部分 */
