--- a/作业一：华为首页(响应式)/css/index.css
+++ b/作业一：华为首页(响应式)/css/index.css
@@ -5,6 +5,7 @@
 }
 html,
 body {
+  min-width: 330px;
   font-size: 10px;
 }
 a {
@@ -31,6 +32,9 @@ header ul {
 header ul .sy {
   background-color: #ffffff;
 }
+header ul .sy:hover {
+  background-color: #ffffff;
+}
 header ul .sy a {
   color: #333333;
 }
@@ -39,6 +43,9 @@ header ul li {
 }
 header ul li:nth-of-type(1) {
   margin-left: 4%;
+}
+header ul li:hover {
+  background-color: #333333;
 }
 header ul li a {
   display: block;
@@ -69,14 +76,8 @@ header nav .login {
   float: right;
   margin-top: 1.2rem;
 }
-/* 媒体查询 */
-@media all and (max-width: 960px) {
-  #coverone {
-    display: none;
-  }
-  #covertwo {
-    display: block;
-  }
+#covertwo {
+  display: none;
 }
 /* 头部第二个 */
 .nav {
@@ -102,3 +103,45 @@ header nav .login {
   margin-top: 2.3rem;
 }
 /* 主体部分 */
+main {
+  padding: 1rem 4%;
+}
+main div a {
+  display: block;
+  width: 94%;
+  font-size: 1.8rem;
+  color: #424242;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  line-height: 3.5rem;
+}
+main div a:hover {
+  text-decoration: underline;
+}
+main div img {
+  width: 94%;
+  display: block;
+  height: 70%;
+}
+main div p {
+  display: block;
+  width: 94%;
+  line-height: 2.5rem;
+  font-size: 1.4rem;
+}
+main .left {
+  width: 33%;
+  float: left;
+}
+main .middle {
+  width: 33%;
+  float: left;
+}
+main .right {
+  width: 33%;
+  float: left;
+}
+#contentTwo {
+  display: none;
+}
