--- a/作业一：华为首页(响应式)/css/index.less
+++ b/作业一：华为首页(响应式)/css/index.less
@@ -4,6 +4,7 @@
     padding: 0;
 }
 html,body{
+    min-width: 330px;
     font-size: 10px;
 }
 a{
@@ -27,9 +28,14 @@ header{
         height: 3.6rem;
         
         .sy{
+           
+            &:hover{
+                background-color:#ffffff ;
+                }
             background-color: #ffffff;
             a{
                 color: #333333;
+               
             }
         }
         
@@ -38,6 +44,9 @@ header{
             &:nth-of-type(1){
                 margin-left: 4%;
             }
+            &:hover{
+                background-color:#333333 ;
+                }
             a{
                 display: block;
                 padding: 0 1.5rem;
@@ -73,21 +82,9 @@ header{
         }
     }
 }
-/* 媒体查询 */
-@media all and (max-width: 960px) {
-    #coverone {
-        display: none;
-    }
-    #covertwo {
-        display: block;
-    }
+#covertwo{
+    display: none;
 }
-// #coverone{
-//     display: none;
-// }
-// #covertwo{
-//     display: block;
-// }
 /* 头部第二个 */
 .nav{
     overflow: hidden;
@@ -114,3 +111,48 @@ header{
 }
 
 /* 主体部分 */
+main{
+    padding: 1rem 4%;
+    div{
+        a{
+           display: block;
+           width: 94%; 
+           font-size: 1.8rem;
+           color: #424242;
+           text-overflow: ellipsis;
+           overflow: hidden;
+           white-space: nowrap;
+           line-height: 3.5rem;
+           &:hover{
+            text-decoration: underline;
+           }
+        }
+        img{
+            width: 94%;
+            display: block;
+            height: 70%;
+        }
+        p{
+            display: block;
+            width: 94%; 
+            line-height: 2.5rem;
+            font-size: 1.4rem;
+        }
+    }
+    .left{
+        width: 33%;
+        float: left;
+    }
+    .middle{
+        width: 33%;
+        float: left;
+    }
+    .right{
+        width: 33%;
+        float: left;
+    }
+}
+
+#contentTwo{
+    display: none;
+}
