--- a/作业二：boss直聘移动首页/css/index.css
+++ b/作业二：boss直聘移动首页/css/index.css
@@ -50,3 +50,79 @@ a {
   font-size: 3rem;
   color: #1dd0ca;
 }
+/* 主体部分 */
+.main {
+  position: relative;
+}
+.main dl {
+  padding-top: 4rem;
+  overflow: hidden;
+  border-bottom: 1px solid #f5f8f9;
+}
+.main dl dt {
+  margin-left: 3rem ;
+  margin-bottom: 3rem ;
+}
+.main dl dt img {
+  width: 10rem;
+  height: 10rem;
+  float: left;
+}
+.main dl dt h1 {
+  width: 43rem;
+  height: 10rem;
+  float: left;
+  margin-bottom: 2rem;
+  font-size: 3rem;
+  color: #404855;
+  line-height: 10rem;
+  margin-left: 3.5rem;
+}
+.main dl dd {
+  margin: 1rem 3rem;
+}
+.main dl dd a {
+  padding: 1rem 3rem 1rem 3rem;
+  display: inline-block;
+  font-size: 2.5rem;
+  color: #7e8793;
+  line-height: 5rem;
+  border-radius: 4rem;
+  box-sizing: border-box;
+  margin: 0 1rem 2rem 0;
+  background-color: #f5f8f9;
+}
+.main .login {
+  width: 100%;
+  height: 11rem;
+  background-color: #1dd0ca;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+.main .login .text {
+  margin-left: 3.5rem;
+  margin-right: 20rem;
+  color: #ffffff;
+  font-size: 2.8rem;
+  margin-top: 1.5rem;
+}
+.main .login .text img {
+  width: 8rem;
+  height: 8rem;
+  margin-right: 2rem;
+  float: left;
+}
+.main .login a {
+  width: 16rem;
+  height: 6rem;
+  background-color: #ffffff;
+  float: right;
+  text-align: center;
+  line-height: 6rem;
+  border-radius: 10rem;
+  margin-top: 2.5rem;
+  margin-right: 3rem;
+  font-size: 2.8rem;
+  color: #5dd5ca;
+}
