作业三jd首页完成提交

--- a/作业三：jd移动首页/css/index.less
+++ b/作业三：jd移动首页/css/index.less
@@ -2,3 +2,117 @@
     margin: 0;
     padding: 0;
 }
+a{
+    text-decoration: none;
+}
+body{
+    font-size: 10px;
+    
+}
+.box{
+    min-width: 300px;
+    max-width: 415px;
+    margin: 0 auto;
+    header{
+        width: 100%;
+        height: 40rem;
+        position: relative;
+            img{
+                width: 100%;
+            }
+        .top{
+            position: fixed;
+            top: 1rem;
+            width: 30rem;
+            height: 4rem;
+            margin-left: 2rem;
+            border-radius: 10rem;
+            background-color: white;
+        input{
+            width: 20rem;
+            height: 4rem;
+            margin-left: 8rem;
+            font-size: 1.7rem;
+            border: none;
+            outline: none;
+        }
+        .logo{
+            float: left;
+            width: 3.5rem;
+            height: 4rem;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            background: url(../images/sprites.png) no-repeat 11px 13px;
+            background-size: 22rem auto;
+        }
+        .search{
+            float: left;
+            width: 3.5rem;
+            height: 4rem;
+            position: absolute;
+            top: 0px;
+            left: 60px;
+            background: url(../images/sprites.png) no-repeat -102px -201px;
+            background-size: 24rem;
+
+        }
+        }
+        span{
+            position: absolute;
+            right: -89px;
+            top: -10px;
+            width: 20%;
+            height: 4rem;
+            font-size: 1.6rem;
+            color: white;
+            text-align: center;
+            line-height: 4rem;
+            margin-top: 0.7rem;
+            display: inline-block;
+        }
+        main{
+            width: 100%;
+            height: 3rem;
+            padding: 2rem;
+            height: 30rem;
+            box-sizing: border-box;
+            background-color: white;
+            border-bottom: 1px solid #c0c0c0;
+            ul{
+                width: 100%;
+                height: 20rem;
+                list-style: none;
+          
+                
+                li{
+                    width: 25%;
+                    height: 8rem;
+                    float: left;
+                    list-style: 3rem;
+
+                    a{
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                       
+                        text-align: center;
+                        p{
+                            color: #333333;
+                            font-size: 1.4rem;
+                        }
+                        img{
+    
+                            display: block;
+                            width:5rem;
+                            margin: 0 auto;
+                        }
+                    }
+
+                }
+            }
+        }
+    }
+   
+}
+
