--- a/作业四：响应式热门活动(响应式)/css/med640.less
+++ b/作业四：响应式热门活动(响应式)/css/med640.less
@@ -1,23 +1,11 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-a{
-    text-decoration: none;
-
-}
-li{
-    list-style: none;
-    margin: 0 20px;
-    text-align: center;
-}
 .box{
-    width: 1024px;
+    width: 320px;
     padding: 30px;
     margin: 10px auto 0;
-    background-color: #ff0000;
+    background-color: yellow;
+    border: 1px solid red;
     h2{
-        font-size: 28px;
+        font-size: 20px;
         span{
             float: right;
             font-size: 15px;
@@ -27,7 +15,7 @@ li{
     .list{
         display: flex;
         margin-top: 30px;
-        justify-content: space-around;
+        flex-wrap:wrap;
         li{
             img{
                width: 90%;
@@ -37,4 +25,4 @@ li{
             }
         }
     }
-}
+  }
