--- a/作业五：携程网-自适应/css/index.less
+++ b/作业五：携程网-自适应/css/index.less
@@ -1,4 +1,158 @@
-*{
+* {
     margin: 0;
     padding: 0;
-}
+  }
+  html {
+    font-size: 10px;
+  }
+  body{
+    max-width: 666px;
+    min-width: 250px;
+    margin: 0 auto;
+  }
+  .swiper {
+    width: 100%;
+    height: 10rem;
+  }
+  .swiper img {
+    width: 100%;
+    height: 10rem;
+  }
+    /* 设置ul */
+    ul {
+        width: 98%;
+        height: 10rem;
+        background-color: pink;
+        margin: 0.5rem auto;
+        border-radius: 0.5rem;
+        list-style: none;
+        overflow: hidden;
+        li {
+            width: 33.33%;
+            height: 5rem;
+            background-color: #f36874;
+            border-right: 1px solid white;
+            border-bottom: 1px solid white;
+            box-sizing: border-box;
+            float: left;
+            text-align: center;
+            color: white;
+            font-size: 1.4rem;
+            line-height: 5rem;
+            cursor: pointer;
+            span {
+                display: block;
+                width: 6rem;
+                height: 4rem;
+                margin-left: 3rem;
+                background: url(../images/sprite.png) no-repeat 0.6rem -12.6rem;
+                background-size: 10.4rem;
+              }
+            &:nth-of-type(1) {
+                height: 10rem;
+              }
+          }
+          &:nth-of-type(2)>li{
+            background-color: #5696f7;
+          }
+          &:nth-of-type(2)>li>span{
+            background-color: #5696f7;
+            background: url(../images/sprite.png) no-repeat 1.6rem -29.1rem;
+            background-size: 10.4rem;
+          }
+          &:nth-of-type(3)>li{
+            background-color: #6bc243;
+          }
+          &:nth-of-type(3)>li>span{
+            background-color: #5696f7;
+            background: url(../images/sprite.png) no-repeat 1.6rem -18.1rem;
+            background-size: 10.4rem;
+          }
+          &:nth-of-type(4)>li{
+            background-color: #f2a33b;
+          }
+          &:nth-of-type(4)>li:nth-of-type(1){
+            height: 5rem;
+          }
+      }
+      .banner{
+        width: 98%;
+        height: 10rem;
+        margin: 0 auto;
+        a{
+            display: block;
+            img{
+                width: 100%;
+            }
+        }
+      }
+      .footer{
+        width: 98%;
+        height: 13rem;
+        margin: 0 auto;
+        text-align: center;
+        border-top: 1px solid #f0f0f0;
+       
+        // background-color: #5696f7;
+        .tel{
+            overflow: hidden;
+            a{
+                position: relative;
+                float: left;
+                padding-top: 5rem;
+                color: #333;
+                font-size: 1.2rem;
+                text-decoration: none;
+                padding-bottom: 2rem;
+
+                &::before{
+                    content: "";
+                    position: absolute;
+                    top: 1.4rem;
+                    left: 50%;
+                    margin-left: -2rem;
+                    width: 3.4rem;
+                    height: 3.4rem;
+                    background: url(../images/sprite.png) no-repeat;
+                    background-size: 20.8rem 65.5rem;
+                }
+            }
+            .reserve{
+                width: 38%;
+                &::before{
+                    background-position: -12rem -30.5rem;
+                }
+            }
+            .download{
+                width: 32%;
+                &::before{
+                    background-position: -12rem -34.6rem;
+                }
+            }
+            .Ctrip{
+                width: 30%;
+                &::before{
+                    background-position: -12rem -61.8rem;
+                }
+            }
+        }
+      
+        .feedback{
+            width: 98%;
+            height: 4rem;
+            margin: 0 auto;
+            border-top: 2px solid #e3e3e3;
+            a{
+                text-decoration: none;
+                display: inline-block;
+                padding: 1rem 1rem;
+                color: #333;
+                font-size: 1.2rem;
+            }
+          }
+          p{
+            color: #999999;
+            font-size: 1.2rem;
+          }
+      }
+    
